# postarization

./: README.md
cli_app/: main.py
flet_app/: Dockerfile  IOS_BUILD.md  README.md  build_ios.sh  fly.toml  pyproject.toml  requirements.txt
flet_app/src/: main.py
