[project]
name = "postarization"
version = "1.1.0"
description = "Anime-style image conversion filter application"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "hinapupil", email = "hinapupil@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "Pillow>=10.0.0",
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.kemuri"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Postarization Filter"

# company name to display in about app dialogs
company = "Kemuri Kobo"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 Kemuri Kobo"

[tool.flet.app]
path = "src"

# iOS specific settings
[tool.flet.ios]
# Bundle ID for iOS app (org.project_name format)
bundle_id = "com.kemuri.postarization"

# iOS permissions - customize as needed
[tool.flet.ios.info]
NSPhotoLibraryUsageDescription = "This app needs access to your photo library to load and save images."
NSPhotoLibraryAddUsageDescription = "This app needs permission to save processed images to your photo library."
NSCameraUsageDescription = "This app needs camera access to take photos for processing."

# iOS signing configuration examples (uncomment and fill in your actual values)
# [tool.flet.ios.export_methods."debugging"]
# provisioning_profile = "Postarization Development"
# signing_certificate = "Apple Development"

# [tool.flet.ios.export_methods."release-testing"]
# provisioning_profile = "Postarization AdHoc"
# signing_certificate = "Apple Distribution"
# team_id = "YOUR_TEAM_ID"

# [tool.flet.ios.export_methods."app-store-connect"]
# provisioning_profile = "Postarization AppStore"
# signing_certificate = "Apple Distribution"
# team_id = "YOUR_TEAM_ID"
# export_options = { uploadSymbols = true }

[dependency-groups]
dev = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}